desain ulang visual

--- a/game.html
+++ b/game.html
@@ -2,72 +2,125 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Haikatalyst Board Game</title>
   <link rel="stylesheet" href="game.css">
 </head>
 <body>
-
-<div id="startPopup" class="overlay">
-  <div class="glass popup-card">
-    <h2>Pilih Jumlah Pemain</h2>
-    <select id="playerCount">
-      <option value="2">2 Pemain</option>
-      <option value="3">3 Pemain</option>
-      <option value="4">4 Pemain</option>
-    </select>
-    <button id="startBtn">Mulai</button>
+  <div class="ambient" aria-hidden="true">
+    <span class="orb"></span>
+    <span class="orb"></span>
+    <span class="orb"></span>
   </div>
-</div>
 
-<!-- GAME AREA -->
-<div class="game-container"></div>
-  <div id="board"></div>
-
-  <div id="control">
-    <div id="info">Tekan Mulai</div>
-    <div id="dice">🎲</div>
-    <button id="rollBtn" disabled>Roll Dadu</button>
-    <button id="openTutorial">Cara Bermain</button>
-  </div>
-</div>
-
-<div id="instructionPopup" class="overlay hidden">
-  <div class="btn-group">
-    <div class="glass popup-card">
-  <h3>Instruksi Blok</h3>
-  <input id="instructionText" placeholder="Tulis instruksi">
-  <input id="instructionMove" type="number" placeholder="Efek langkah">
-
-      <button id="saveInstruction">Simpan</button>
-      <button id="closeInstruction">Batal</button>
+  <div id="startPopup" class="overlay">
+    <div class="popup-card start-card">
+      <p class="eyebrow">Game Setup</p>
+      <h2>Siap Main?</h2>
+      <p class="subtext">Pilih jumlah pemain lalu mulai pertarungan strategi.</p>
+      <select id="playerCount">
+        <option value="2">2 Pemain</option>
+        <option value="3">3 Pemain</option>
+        <option value="4">4 Pemain</option>
+      </select>
+      <button id="startBtn" class="btn primary">Mulai Game</button>
     </div>
   </div>
-</div>
 
-<div id="tutorialPopup" class="overlay hidden">
-  <div class="popup-card">
-    <h3>Cara Bermain</h3>
+  <main id="game" class="game-layout">
+    <section class="board-panel">
+      <div class="panel-header">
+        <div>
+          <p class="eyebrow">Haikatalyst</p>
+          <h1>Board Arena</h1>
+        </div>
+        <div class="leader-wrap">
+          <span>Leader</span>
+          <strong id="leaderText">Pemain 1</strong>
+        </div>
+      </div>
 
-    <ul style="text-align:left; font-size:14px; line-height:1.6;">
-      <li>Tekan Roll Dadu untuk bergerak</li>
-      <li>Pion maju sesuai angka dadu</li>
-      <li>Pemain dapat menambahkan instruksi pada blok mana saja</li>
-      <li>Jika berhenti di blok berinstruksi, jalankan perintahnya</li>
-      <li>Pemain pertama yang mencapai blok terakhir menang</li>
-    </ul>
+      <div id="board"></div>
 
-    <button id="closeTutorial">Tutup</button>
+      <div class="progress-wrap">
+        <span>Progress permainan</span>
+        <div class="progress-track">
+          <div id="progressFill"></div>
+        </div>
+      </div>
+    </section>
+
+    <aside id="control" class="control-panel">
+      <div class="glass stat-card">
+        <p class="stat-title">Status Giliran</p>
+        <div id="info">Tekan Mulai</div>
+        <div class="dice-wrap">
+          <div id="dice">🎲</div>
+          <span id="lastRoll">Belum roll</span>
+        </div>
+        <button id="rollBtn" class="btn primary" disabled>Roll Dadu</button>
+      </div>
+
+      <div class="glass stat-card">
+        <p class="stat-title">Aksi</p>
+        <div class="action-grid">
+          <button id="openTutorial" class="btn secondary">Cara Bermain</button>
+        </div>
+      </div>
+
+      <div class="glass stat-card">
+        <p class="stat-title">Battle Log</p>
+        <ul id="logList"></ul>
+      </div>
+    </aside>
+  </main>
+
+  <div id="instructionPopup" class="overlay hidden">
+    <div class="popup-card">
+      <h3>Instruksi Blok</h3>
+      <p class="subtext">Tambahkan efek ketika pemain mendarat di blok ini.</p>
+      <input id="instructionText" placeholder="Contoh: Mundur karena kena jebakan">
+      <input id="instructionMove" type="number" placeholder="Efek langkah (misal -3 / +4)">
+      <div class="btn-row">
+        <button id="saveInstruction" class="btn primary">Simpan</button>
+        <button id="closeInstruction" class="btn secondary">Batal</button>
+      </div>
+    </div>
   </div>
-</div>
 
-<div id="customPopup" class="overlay hidden">
-  <div class="popup-card">
-    <h3 id="popupTitle">Instruksi</h3>
-    <p id="popupMessage"></p>
-    <button id="popupOk">OK</button>
+  <div id="tutorialPopup" class="overlay hidden">
+    <div class="popup-card">
+      <h3>Cara Bermain</h3>
+      <ul class="tutorial-list">
+        <li>Tekan Roll Dadu untuk bergerak sesuai angka.</li>
+        <li>Klik blok untuk menambahkan instruksi khusus.</li>
+        <li>Jika berhenti di blok berinstruksi, efeknya langsung dijalankan.</li>
+        <li>Gunakan Random Event untuk kejutan tambahan.</li>
+        <li>Pemain pertama yang mencapai blok 100 menang.</li>
+      </ul>
+      <button id="closeTutorial" class="btn primary">Tutup</button>
+    </div>
   </div>
-</div>
 
-<script src="game.js"></script>
+  <div id="customPopup" class="overlay hidden">
+    <div class="popup-card">
+      <h3 id="popupTitle">Instruksi Blok</h3>
+      <p id="popupMessage"></p>
+      <button id="popupOk" class="btn primary">Lanjut</button>
+    </div>
+  </div>
+
+  <div id="winPopup" class="overlay hidden">
+    <div class="popup-card win-card">
+      <h3 id="winText">Pemenang</h3>
+      <p>Game selesai! Mau main lagi?</p>
+      <div class="btn-row">
+        <button id="restartBtn" class="btn primary">Main Lagi</button>
+        <a href="index.html" class="btn secondary link-btn">Ke Beranda</a>
+      </div>
+    </div>
+  </div>
+
+  <script src="game.js"></script>
 </body>
 </html>
