--- a/developer.html
+++ b/developer.html
@@ -4,108 +4,266 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profil Pengembang</title>
-    
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
 
     <style>
-        body {
-            margin: 0;
-            font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-            min-height: 100vh;
-            background: linear-gradient(135deg, #cdb4f5, #a6c8ff);
-            display: flex;
-            justify-content: center;
-            align-items: center;
+        :root {
+            --bg-main: #07070d;
+            --bg-alt: #0d1020;
+            --neon: #7c8cff;
+            --neon-pink: #d66eff;
+            --text-main: #f4f6ff;
+            --text-soft: #b7bfd8;
+            --glass: rgba(16, 20, 38, 0.72);
+            --line: 1px solid rgba(150, 170, 255, 0.26);
         }
 
-        .glass {
-            background: rgba(255, 255, 255, 0.28);
-            backdrop-filter: blur(18px);
-            -webkit-backdrop-filter: blur(18px);
-            border: 1px solid rgba(255, 255, 255, 0.35);
-            border-radius: 22px;
-            padding: 42px 32px;
-            max-width: 480px;
-            width: 90%;
+        * { box-sizing: border-box; }
+
+        body {
+            margin: 0;
+            min-height: 100vh;
+            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+            color: var(--text-main);
+            background:
+                radial-gradient(circle at 15% 10%, rgba(124, 140, 255, 0.25), transparent 40%),
+                radial-gradient(circle at 80% 90%, rgba(214, 110, 255, 0.18), transparent 45%),
+                linear-gradient(160deg, var(--bg-main), var(--bg-alt));
+            display: grid;
+            place-items: center;
+            padding: 24px;
+            overflow: hidden;
+        }
+
+        .noise {
+            position: fixed;
+            inset: 0;
+            pointer-events: none;
+            opacity: 0.08;
+            background-image: radial-gradient(circle, rgba(255,255,255,0.5) 0.5px, transparent 0.5px);
+            background-size: 3px 3px;
+        }
+
+        .panel {
+            width: min(100%, 920px);
+            background: var(--glass);
+            border: var(--line);
+            border-radius: 24px;
+            box-shadow:
+                0 0 0 1px rgba(124, 140, 255, 0.15),
+                0 24px 70px rgba(0, 0, 0, 0.45),
+                inset 0 0 50px rgba(124, 140, 255, 0.05);
+            backdrop-filter: blur(12px);
+            -webkit-backdrop-filter: blur(12px);
+            display: grid;
+            grid-template-columns: 290px 1fr;
+            overflow: hidden;
+        }
+
+        .left {
+            padding: 34px 24px 28px;
+            border-right: var(--line);
             text-align: center;
-            box-shadow: 0 24px 50px rgba(0,0,0,0.15);
+            background: linear-gradient(180deg, rgba(124, 140, 255, 0.08), rgba(0,0,0,0));
+        }
+
+        .avatar-wrap {
+            width: 120px;
+            height: 120px;
+            margin: 0 auto 18px;
+            border-radius: 50%;
+            padding: 3px;
+            background: linear-gradient(135deg, var(--neon), var(--neon-pink));
+            box-shadow: 0 0 24px rgba(124, 140, 255, 0.4);
         }
 
         .avatar {
-            width: 96px;
-            height: 96px;
+            width: 100%;
+            height: 100%;
             border-radius: 50%;
             object-fit: cover;
-            margin-bottom: 18px;
-            border: 2px solid rgba(255,255,255,0.6);
+            border: 2px solid rgba(9, 11, 24, 0.9);
         }
 
-        h1 {
-            font-size: 26px;
-            margin: 6px 0;
-            color: #111;
+        .name {
+            margin: 0;
+            font-size: 22px;
+            font-weight: 800;
+            letter-spacing: 0.2px;
         }
 
-        h2 {
+        .role {
+            margin: 8px 0 0;
+            font-size: 13px;
+            color: var(--text-soft);
+            line-height: 1.6;
+        }
+
+        .tag {
+            margin: 16px auto 0;
+            width: fit-content;
+            padding: 7px 12px;
+            border-radius: 999px;
+            border: var(--line);
+            background: rgba(124, 140, 255, 0.16);
+            color: #dce1ff;
+            font-size: 12px;
+            font-weight: 600;
+        }
+
+        .right {
+            padding: 34px 28px 28px;
+            text-align: left;
+        }
+
+        .eyebrow {
+            display: inline-block;
+            margin-bottom: 10px;
+            font-size: 12px;
+            letter-spacing: 0.14em;
+            text-transform: uppercase;
+            color: #96a2d7;
+        }
+
+        .glitch {
+            margin: 0 0 12px;
+            font-size: clamp(24px, 4vw, 34px);
+            font-weight: 800;
+            line-height: 1.15;
+            position: relative;
+            width: fit-content;
+            text-shadow: 1px 0 rgba(214, 110, 255, 0.75), -1px 0 rgba(124, 140, 255, 0.75);
+        }
+
+        .desc {
+            margin: 0 0 20px;
+            color: var(--text-soft);
             font-size: 14px;
-            font-weight: 500;
-            color: #222;
+            line-height: 1.75;
+            max-width: 60ch;
+        }
+
+        .meta-grid {
+            display: grid;
+            grid-template-columns: repeat(2, minmax(180px, 1fr));
+            gap: 12px;
             margin-bottom: 22px;
         }
 
-        p {
-            font-size: 14.5px;
-            line-height: 1.7;
-            color: #111;
-            margin-bottom: 34px;
+        .meta-item {
+            border: var(--line);
+            background: rgba(17, 22, 44, 0.76);
+            border-radius: 14px;
+            padding: 12px 13px;
+        }
+
+        .meta-label {
+            display: block;
+            font-size: 11px;
+            color: #95a2db;
+            text-transform: uppercase;
+            letter-spacing: 0.08em;
+            margin-bottom: 6px;
+        }
+
+        .meta-value {
+            margin: 0;
+            font-size: 13px;
+            color: #f2f5ff;
+            line-height: 1.5;
+            font-weight: 500;
+        }
+
+        .actions {
+            display: flex;
+            gap: 10px;
+            flex-wrap: wrap;
         }
 
         .btn {
-            display: inline-block;
-            padding: 10px 28px;
-            border-radius: 999px;
-            background: rgba(255,255,255,0.95);
-            color: #5b6cff;
             text-decoration: none;
-            font-weight: 600;
-            box-shadow: 0 10px 20px rgba(0,0,0,0.15);
-            transition: transform 0.15s ease;
+            font-size: 13px;
+            font-weight: 700;
+            border-radius: 12px;
+            padding: 11px 16px;
+            transition: transform 0.14s ease, box-shadow 0.14s ease;
+        }
+
+        .btn.primary {
+            background: linear-gradient(135deg, var(--neon), var(--neon-pink));
+            color: #090b18;
+            box-shadow: 0 10px 24px rgba(124, 140, 255, 0.35);
+        }
+
+        .btn.secondary {
+            background: rgba(124, 140, 255, 0.12);
+            color: #dee3ff;
+            border: var(--line);
         }
 
         .btn:hover {
-            transform: translateY(-1px);
+            transform: translateY(-2px);
+            box-shadow: 0 14px 28px rgba(124, 140, 255, 0.3);
+        }
+
+        @media (max-width: 820px) {
+            .panel { grid-template-columns: 1fr; }
+            .left { border-right: none; border-bottom: var(--line); }
+            .right { padding-top: 26px; }
+            .meta-grid { grid-template-columns: 1fr; }
         }
     </style>
 </head>
 <body>
+    <div class="noise" aria-hidden="true"></div>
 
-    <div class="glass">
-        <img src="avatar.jpg" alt="foto orang ganteng" class="avatar">
+    <section class="panel" aria-label="Profil pengembang">
+        <aside class="left">
+            <div class="avatar-wrap">
+                <img src="avatar.jpg" alt="Foto Haikal Akbar Diennova" class="avatar">
+            </div>
 
-        <h1>Haikal Akbar Diennova</h1>
-        <h2>Pengembang Haikatalyst Board Games</h2>
+            <h1 class="name">Haikal Akbar Diennova</h1>
+            <p class="role">Pengembang<br>Haikatalyst Board Games</p>
+            <div class="tag">NIM 2227220108</div>
+        </aside>
 
-        <p>
-            Haikatalyst Board Games dikembangkan sebagai media
-            pembelajaran matematika berbasis permainan
-            dengan pendekatan visual yang sederhana
-            dan pengalaman belajar yang interaktif.
-            <br>
-            <br>
-            NIM : 2227220108
-            <br>
-            Dosen Pembimbing 1 : Reksa Adya Pribadi, M. Pd.
-            <br>
-            Dosen Pembimbing 2 : Firdaus, M. Pd.
-            <br>
-            Program Studi : Pendidikan Guru Sekolah Dasar
-            <br>
-            Universitas Sultan Ageng Tirtayasa
-            <br>
-        </p>
+        <main class="right">
+            <span class="eyebrow">Profil Pengembang</span>
+            <h2 class="glitch">HAIKATALYST</h2>
+            <p class="desc">
+                Haikatalyst Board Games dikembangkan sebagai media pembelajaran berbasis permainan,
+                yang dimana pemain dapat menambahkan instruksi pada blok yang sudah disediakan untuk menyelesaikan tantangan yang ada.
+            </p>
 
-        <a href="index.html" class="btn">Kembali</a>
-    </div>
+            <div class="meta-grid">
+                <article class="meta-item">
+                    <span class="meta-label">Dosen Pembimbing 1</span>
+                    <p class="meta-value">Reksa Adya Pribadi, M. Pd.</p>
+                </article>
 
+                <article class="meta-item">
+                    <span class="meta-label">Dosen Pembimbing 2</span>
+                    <p class="meta-value">Firdaus, M. Pd.</p>
+                </article>
+
+                <article class="meta-item">
+                    <span class="meta-label">Program Studi</span>
+                    <p class="meta-value">Pendidikan Guru Sekolah Dasar</p>
+                </article>
+
+                <article class="meta-item">
+                    <span class="meta-label">Universitas</span>
+                    <p class="meta-value">Universitas Sultan Ageng Tirtayasa</p>
+                </article>
+            </div>
+
+            <div class="actions">
+                <a href="index.html" class="btn primary">← Kembali ke Beranda</a>
+                <a href="game.html" class="btn secondary">Main Sekarang</a>
+            </div>
+        </main>
+    </section>
 </body>
 </html>
