commit gw keren

--- a/developer.html
+++ b/developer.html
@@ -261,7 +261,7 @@
 
             <div class="actions">
                 <a href="index.html" class="btn primary">← Kembali ke Beranda</a>
-                <a href="game.html" class="btn secondary">Main Sekarang</a>
+                <a href="https://www.instagram.com/avrua" class="btn secondary" target="_blank">Follow Instagram</a>
             </div>
         </main>
     </section>
