--- a/developer.html
+++ b/developer.html
@@ -33,7 +33,8 @@
             display: grid;
             place-items: center;
             padding: 24px;
-            overflow: hidden;
+            overflow-x: hidden;
+            overflow-y: auto;
         }
 
         .noise {
@@ -208,6 +209,10 @@
         }
 
         @media (max-width: 820px) {
+           body {
+                place-items: start center;
+                padding: 16px;
+            }
             .panel { grid-template-columns: 1fr; }
             .left { border-right: none; border-bottom: var(--line); }
             .right { padding-top: 26px; }
