fix device orientation

--- a/game.html
+++ b/game.html
@@ -16,7 +16,7 @@
   <div id="startPopup" class="overlay">
     <div class="popup-card start-card">
       <p class="eyebrow">Game Setup</p>
-      <h2>Siap Main?</h2>
+      <h2>Pilih Jumlah Pemain</h2>
       <p class="subtext">Pilih jumlah pemain lalu mulai bermain.</p>
       <div id="playerSelect" class="player-select" data-value="2">
         <button id="playerSelectTrigger" class="player-select-trigger" type="button" aria-haspopup="listbox" aria-expanded="false" aria-labelledby="playerSelectLabel">
