--- a/game.html
+++ b/game.html
@@ -32,6 +32,19 @@
           <li><button type="button" class="player-option" data-value="7" role="option" aria-selected="false">7 Pemain</button></li>
         </ul>
       </div>
+       <div class="mode-select" role="group" aria-label="Pilih mode board">
+        <p class="mode-label">Mode Board</p>
+        <div class="mode-options">
+          <button type="button" class="mode-option selected" data-mode="plain" aria-pressed="true">
+            Polos
+            <small>Semua blok normal</small>
+          </button>
+          <button type="button" class="mode-option" data-mode="hazard" aria-pressed="false">
+            Gangguan Acak
+            <small>Ada blok berbahaya yang membuat mundur</small>
+          </button>
+        </div>
+      </div>
       <button id="startBtn" class="btn primary">Mulai Game</button>
     </div>
   </div>
