--- a/developer.html
+++ b/developer.html
@@ -230,7 +230,7 @@
             </div>
 
             <h1 class="name">Haikal Akbar Diennova</h1>
-            <p class="role">Pengembang<br>Haikatalyst Board Games</p>
+            <p class="role">The honored one.</p>
             <div class="tag">NIM 2227220108</div>
         </aside>
 
