--- a/developer.html
+++ b/developer.html
@@ -238,8 +238,8 @@
             <span class="eyebrow">Profil Pengembang</span>
             <h2 class="glitch">HAIKATALYST</h2>
             <p class="desc">
-                Haikatalyst Board Games dikembangkan sebagai media pembelajaran berbasis permainan,
-                yang dimana pemain dapat menambahkan instruksi pada blok yang sudah disediakan untuk menyelesaikan tantangan yang ada.
+                Haikatalyst dikembangkan sebagai media pembelajaran berbasis permainan,
+                yang dirancang untuk membantu siswa dari seluruh jenjang kelas dalam memahami materi pelajaran dengan cara yang lebih interaktif dan menyenangkan.
             </p>
 
             <div class="meta-grid">
