--- a/game-kelas5-mat.html
+++ b/game-kelas5-mat.html
@@ -55,13 +55,20 @@
   <div id="setupGuidePopup" class="overlay hidden">
     <div class="popup-card">
       <h3>Instruksi Bermain</h3>
-      <ul class="tutorial-list">
-        <li>Pilih jumlah pemain dan mode board di halaman setup.</li>
+      <ol class="tutorial-list">
+        <li>Sebelum bermain dipastikan guru sudah membuat daftar pertanyaan untuk diisi pada blok instruksi secara acak</li>
+        <li>Selanjutnya guru diminta untuk membagi kelompok terlebih dahulu</li>
+        <li>Kemudian perwakilan kelompoknya akan bermain permainan ini</li>
+        <li>Pilih jumlah pemain sesuai dengan jumlah perwakilan kelompok</li>
+        <li>Setelah itu pilih mode permainan yang ingin dimainkan</li>
         <li>Tekan <strong>Mulai Game</strong>, lalu bergantian roll dadu.</li>
         <li>Klik blok untuk menambahkan instruksi dan efek langkah.</li>
         <li>Kalau mode Gangguan Acak aktif, hindari blok dengan ikon ⚠.</li>
         <li>Pemain pertama yang mencapai blok 100 menjadi pemenang.</li>
-      </ul>
+        <li>Selamat bermain dan semoga menyenangkan!</li>
+        <br>Catatan:</br>Instruksi di atas juga bisa disampaikan secara lisan oleh guru kepada siswa sebelum bermain.</li>
+      </ol>
+      <br>
       <button id="closeSetupGuide" class="btn primary" type="button">Tutup</button>
     </div>
   </div>
