--- a/game-kelas1.html
+++ b/game-kelas1.html
@@ -6,3 +6,32 @@
   <title>Kelas 1 - Bahasa Indonesia - Menyusun Kalimat</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="game-kelas1.css">
+</head>
+<body>
+  <div class="bg-glow bg-glow-a" aria-hidden="true"></div>
+  <div class="bg-glow bg-glow-b" aria-hidden="true"></div>
+
+  <main class="page">
+    <section class="hero-box reveal">
+      <h1>Menyusun Kalimat</h1>
+      <p>
+        Susunlah kalimat yang benar dari kata-kata yang tersedia!
+        Klik tombol "Acak Kata" untuk mengacak posisi kata, lalu klik kata untuk menyusunnya.
+      </p>
+    </section>
+
+    <section class="game-area" aria-label="Area permainan menyusun kalimat">
+      <div id="wordPool" class="word-pool" aria-live="polite">
+        <!-- Kata-kata akan muncul di sini -->
+      </div>
+      <button id="shuffleBtn" class="btn secondary" type="button">Acak Kata</button>
+      <button id="submitBtn" class="btn primary" type="button">Kirim Jawaban</button>
+    </section>
+
+    <div class="footer-row reveal" style="--delay: 500ms">
+      <p class="hint">Tip: klik kata-kata untuk menyusunnya menjadi kalimat yang benar.</p>
+      <a class="back-link" href="jenjang.html">← kembali</a>
+    </div>
+  </main>
+
+  <script src="game-kelas1.js"></script>
